added vendor vie

--- a/Views/Listings/ViewOrders.cshtml
+++ b/Views/Listings/ViewOrders.cshtml
@@ -7,6 +7,10 @@
 
 
 <div class="min-h-screen bg-light text-dark font-sans p-10 ">
+    <div class="flex items-center justify-end p-2 overflow-hidden">
+
+
+    </div>
     <div class="flex gap-3">
         <a asp-action="ViewOrders" class="bg-primary text-white px-5 py-2 rounded-lg hover:bg-green-700 transition">
             View Orders
@@ -67,3 +71,6 @@
         </div>
     </div>
 </div>
+<script>
+    feather.replace();
+</script>
