--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -74,11 +74,13 @@
                                             <a asp-action="Index" asp-controller="Vendors">Analytics</a>
 
                                         </li>
-                                        <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-sm text-gray-700">Edit
-                                            Account
+                                        <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-sm text-gray-700">
+
+                                            <a asp-action="Edit" asp-controller="Vendors">Edit Account</a>
                                         </li>
-                                        <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-sm text-red-700">Delete
-                                            Account
+                                        <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-sm text-red-700">
+                                            <a asp-action="Delete" asp-controller="Vendors">Delete Account</a>
+
                                         </li>
                                         <li class="px-4 py-2">
                                             <a asp-controller="LogIn" asp-action="Logout"
