--- a/Views/Home/Error.cshtml
+++ b/Views/Home/Error.cshtml
@@ -5,12 +5,12 @@
             <div class="bg-red-400  p-6 text-center">
                 <div class="flex justify-center mb-4">
                     <div class="bg-white p-3 rounded-full">
-                        <i data-feather="check-circle" class="text-red-400 w-8 h-8"></i>
+                        <i data-feather="x-circle" class="text-red-400 w-8 h-8"></i>
                     </div>
                 </div>
                 <h1 class="text-2xl font-bold text-white">Something went wrong</h1>
                 <p class="text-white/90 mt-1">
-
+                    Please try again.
                 </p>
 
             </div>
